--- a/lab2/Hello-World.html
+++ b/lab2/Hello-World.html
@@ -11,7 +11,7 @@
             <h1>Hello World</h1>
 
             <p> My partners name is Emma, she is really sweet and helpful! She has really cool curly hair. Our favorite animals are both cats! Her favorite thing about Santa Cruz is being so close to the ocean. Emma is a great partner. </p>
-            <img src="./img/ocean.jpeg" alt="Ocean">
+            <img src="./img/oceann.jpg" alt="Ocean" width="300">
             
         </div>   
      </body>
