--- a/lab2/index.html
+++ b/lab2/index.html
@@ -24,28 +24,31 @@
 	<main id="content">
 		<section>
 			<h1>Lab 2 -  HTML & CSS Starter</h1>
+			<link rel="stylesheet" href="lab2.css">
 			<div class="minor-section">
 					<h2>Challenge</h2>
-					<p>Restate the challenge of the lab here.</p>
+					<p>This lab was a challenge for me since I don't have any coding experince. I felt like I was learning a completely new task, as I was focused on making it work, and making the code right. It was difficult to remeber the steps to take to save and open it, and what codes nd icons meant different things. Overall it was diffucult, but I feel like my partner and I both did a great job. </p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Problems</h2>
-					<p>What problems arose? How did you solve them? </p>
+					<p>I kept running into the problems that were pretyy basic, like for example I wasn't sure how to link my html to the css code I had written. I solved this problem, and also another problem included not being able to link photos, with WESBOT!!!! I love wesbot its such a unique way of helping students, and it did help a lot! </p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Reflection</h2>
-					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
+					<p> I think I put a lot of effort into this assignment, specifically becuase it needed all of my focus. I am slowly learning how to code, and even now as I write this I'm not sure if it will work on my final page, but I'm feeling pretty confident about how my webpage looks now, and the changes I will continue to make to it.  </p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Results</h2>
+					<p> We suceeded at the objective of Lab 2 by making our website interactive, functional and pretty!</p>
 					<div id="output"></div>
 			</div>
 		</section>
 		<nav id="links">
-			<!-- Put links to other pages (including the homepage) here. -->
+				<a href="index.html">Home</a> 
+			</nav>
 		</nav>
 	</main>
 </body>
