--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<h1>Autania's Homepage</h1>
 			<div class="minor-section">
 					<!-- Note that all filenames use lowercase and no spaces -->
-					<img class="cat-photo" src="./img/cute-grey-kitten.jpg">
+					<img src="img/Screenshot 2024-10-10 at 5.49.59 PM.png"
 					<h2>About Me</h2>
 					<p> Name pronounced like Aw-tain-e-ya. Loves cats and faires and pottery.</p>
 			</div>
