--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 	<!-- <script type="text/javascript" src="./js/lab.js" DEFER></script> -->
 </head>
-<link rel="stylesheet" href="site.css">
+<link rel="stylesheet" href="./homepage/site.css">
 <body>
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
@@ -25,7 +25,7 @@
 			<h1>Autania's Homepage</h1>
 			<div class="minor-section">
 					<!-- Note that all filenames use lowercase and no spaces -->
-					<img src="img/Screenshot 2024-10-10 at 5.49.59 PM.png" width="200">
+					<img class="autania photo" src="img/Screenshot 2024-10-10 at 5.49.59 PM.png" width="200">
 				
 					<h2>About Me</h2>
 					<p> Name pronounced like Aw-tain-e-ya. Loves cats and faires and pottery.</p>
