--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				
 					<h2>About Me</h2>
 					<p> Name pronounced like Aw-tain-e-ya. Loves cats and faires and pottery.</p>
-			<img src="./img/hike.jpg" width="200px"
+			<img src="./img/hike.jpg" width="200"
 			<p> This is my favorite hike. Upper Salmon Lake, Tahoe.</p>
 			</div>
 
