--- a/index.html
+++ b/index.html
@@ -28,14 +28,19 @@
 					<img class="autania photo" src="img/Screenshot 2024-10-10 at 5.49.59 PM.png" width="200">
 				
 					<h2>About Me</h2>
-					<p> Name pronounced like Aw-tain-e-ya. Loves cats and faires and pottery.</p>
-			<img src="./img/hike.jpg" width="200"
-			<p> This is my favorite hike. Upper Salmon Lake, Tahoe.</p>
+					<p> Name pronounced like Aw-tain-e-ya. Loves cats and faires and pottery. I am a 4th year Legal Studies Student, and I hope to one day be a really cool girl boss attorney. Thanks for visiting my page!</p>
+			<img class="hike photo" src="./img/hike.jpg" width="200">
+
+					<p> This is my favorite hike. Upper Salmon Lake, Tahoe.</p>
 			</div>
 
 		</section>
 		<nav id="links">
-			<a href="lab2/Hello-World.html">Lab 2</a> 
+			<a href="lab2/hello-world.html">Lab 2</a> 
+			<a href="lab3/index.html">Lab 3</a> 
+			<a href="lab4/index.html">Lab 4</a> 
+			<a href="lab5/index.html">Lab 5</a> 
+			<a href="lab6/index.html">Lab 6</a> 
 		</nav>
 	</main>
 </body>
