--- a/index.html
+++ b/index.html
@@ -27,8 +27,11 @@
 					<!-- Note that all filenames use lowercase and no spaces -->
 					<img class="autania photo" src="img/Screenshot 2024-10-10 at 5.49.59 PM.png" width="200">
 				
-					<h2>About Me</h2>
+					<h2>All About Me</h2>
 					<p> Name pronounced like Aw-tain-e-ya. Loves cats and faires and pottery. I love a long hike more than anthing else, and I grew up in the Sierra Nevada Mountians I am a 4th year Legal Studies Student, and I hope to one day be a really cool girl boss attorney. Thanks for visiting my page!</p>
+		</section>
+					
+		<section>
 			<img class="hike photo" src="./img/hike.jpg" width="200">
 
 					<p> This is my favorite hike. Upper Salmon Lake, Tahoe.</p>
