--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 			</div>
 
 		</section>
+		<section> 
 		<nav id="links">
 			<a href="lab2/hello-world.html">Lab 2</a> 
 			<a href="lab3/index.html">Lab 3</a> 
@@ -45,6 +46,7 @@
 			<a href="lab5/index.html">Lab 5</a> 
 			<a href="lab6/index.html">Lab 6</a> 
 		</nav>
+		</section>
 	</main>
 </body>
 </html>
