--- a/lab3/index.html
+++ b/lab3/index.html
@@ -11,6 +11,7 @@
 	
 	<!-- Include a sitewide CSS file for consistent styling across the site -->
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
+	
 	<!-- Lab-specifc CSS file for any special styling of this particular page -->
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 	
@@ -19,6 +20,9 @@
 	<!-- Link to javascript file - DEFER waits until all elements are rendered -->
 	<script type="text/javascript" src="./js/lab.js" DEFER></script>
 </head>
+
+<link rel="stylesheet" type="text/css" href="css/lab.css">
+	
 <body>
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
@@ -26,26 +30,32 @@
 			<h1>Lab 3 - Structure File Transfer</h1>
 			<div class="minor-section">
 					<h2>Challenge</h2>
-					<p>Restate the challenge of the lab here.</p>
+					<p> This lab is meant to get us to understand how file structure works, and be able to create, link, and format specific pages. </p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Problems</h2>
-					<p>What problems arose? How did you solve them? </p>
+					<p> My first problem that arose was not being able to correctly have the image I wanted in the webpage, to format the way I wanted it to. I solved this by asking my neighbors about images, and they helped me by making a class in css, and by doing so I was able to adjust the size of the image. I also helped my partner do the same thing once I had learned it!  </p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Reflection</h2>
-					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
+					<p> I think this assignment went really well. I understand how to format files, and it wasn't too much extra learning. Since I spent the first two labs relly attempting to understand what I was doing with this reposatory, it went much more smoothly. I care about this assignment a lot so I put a lot of effort into it. I even learned how to put in multiple pictures, and continue to edit my homepage with css, and discover new elements of code that I can use for this assignment and future assignments! </p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Results</h2>
 					<div id="output"></div>
+					<img class="art101files" src="/lab3/img/art101files.png" width="200">
+					<p> This is my first look at all of my clean and organized files in my repo!</p>
+					<img class="myhomepage" src="/lab3/img/myhomepage.png" width="200">
+					<p> This my homepage as seen on VisStuCode as I like to call it. :P </p>
+					<img class="localfiles" src="/lab3/img/mylocalfiles.png" width="200">
+					<p> In my computer I have all the files also correctly organized. Yay!!!! I love when my computer is all cleaned up.</p>
 			</div>
 		</section>
 		<nav id="links">
-			<!-- Put links to other pages (including the homepage) here. -->
+			<a href="index.html"> Go Home!</a> 
 		</nav>
 	</main>
 </body>
