--- a/lab3/index.html
+++ b/lab3/index.html
@@ -47,12 +47,16 @@
 					<h2>Results</h2>
 					<div id="output"></div>
 
-					<img class="art101files"src="/lab3/img/art101files.png"width="200">
+					<img class="art101files" src="img/art101files.png" width="200">
+
 					<p> This is my first look at all of my clean and organized files in my repo!</p>
 					
-					<img class="myhomepage"src="/lab3/img/myhomepage.png"width="200">
-					<p> This my homepage as seen on VisStuCode as I like to call it. :P </p>
-					<img class="localfiles"src="/lab3/img/mylocalfiles.png"width="200">
+					<img class="homepage" src="img/myhomepage.png" width="200">
+
+					<p> This is my homepage as seen on VisStuCode as I like to call it. :P </p>
+
+					<img class="localfiles" src="img/mylocalfiles.png" width="200">
+					
 					<p> In my computer I have all the files also correctly organized. Yay!!!! I love when my computer is all cleaned up.</p>
 			</div>
 		</section>
