--- a/lab3/index.html
+++ b/lab3/index.html
@@ -56,12 +56,12 @@
 					<p> This is my homepage as seen on VisStuCode as I like to call it. :P </p>
 
 					<img class="localfiles" src="img/mylocalfiles.png" width="200">
-					
+
 					<p> In my computer I have all the files also correctly organized. Yay!!!! I love when my computer is all cleaned up.</p>
 			</div>
 		</section>
 		<nav id="links">
-			<a href="index.html"> Go Home!</a> 
+			<a href="/index.html"> Go Home!</a> 
 		</nav>
 	</main>
 </body>
