--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 		</section>
 		<section> 
 		<nav id="links">
-			<a href="lab2/hello-world.html">Lab 2</a> 
-			<a href="lab3/index.html">Lab 3</a> 
+			<a href="lab2/hello-world.html">Lab 2 HTML & CSS Starter</a> 
+			<a href="lab3/index.html">Lab 3 File Structure</a> 
 			<a href="lab4/index.html">Lab 4</a> 
 			<a href="lab5/index.html">Lab 5</a> 
 			<a href="lab6/index.html">Lab 6</a> 
