--- a/lab2/index.html
+++ b/lab2/index.html
@@ -47,7 +47,7 @@
 			</div>
 		</section>
 		<nav id="links">
-				<a href="/index.html">Home</a> 
+				<a href="/homepageindex.html">Home</a> 
 			</nav>
 		</nav>
 	</main>
