--- a/lab3/index.html
+++ b/lab3/index.html
@@ -61,7 +61,7 @@
 			</div>
 		</section>
 		<nav id="links">
-			<a href="/homepageindex.html"> go home!</a> 
+			<a href="/homepageindex.html">Go Home!</a> 
 		</nav>
 	</main>
 </body>
