--- a/lab4/index.html
+++ b/lab4/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Lab X - Subject/Topic</title>
+	<title> Lab 4 - Psuedocode </title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
   	<meta charset="UTF-8" />
@@ -23,7 +23,35 @@
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
-			<h1>Lab X - Subject/Topic</h1>
+			<h1>Lab 4- Pseudocode and problem solving </h1>
+		
+		</section>
+		<section
+		<ul>
+			<li>Identify what you would like to paint</li>
+			<li>Gather supplies</li>
+			<li>Colored paint, Paint brushes, Canvas of any size, Easel, Paint Pallet, Water washing cups, Smock, varnish</li>
+			<li>Go to location</li>
+			<li>Set up Easel and canvas</li>
+			<li>Put on smock to protect your clothes from paint</li>
+			<li>Identify colors of paint you will use to replicate the scene you want to paint</li>
+			<li>Squeeze paint on to pallet in small dollops
+			<li>Use brush to apply paint to canvas 
+			<li> pply background colors first let paint dry between layers 
+			<li> Wash brush in water before using a new color
+		 to prevent cross contamination 
+		 	<li>Layer paint to mimic scenery 
+			<li>Copy what you see at location in your own individual art style
+			<li>Paint small details over large details 
+			<li>Add lighter colored paints as highlights
+			-Admire your painting as it drys 
+			-Add your own signature 
+			-After painting is completely dry add varnish if you want. 
+			-Wash brushes, remove smock, pack up supplies
+			-Take home painting
+			-Hang it up on wall or give to a friend. 
+
+		</p>
 			<div class="minor-section">
 					<h2>Challenge</h2>
 					<p>Restate the challenge of the lab here.</p>
