--- a/lab5/index.html
+++ b/lab5/index.html
@@ -22,7 +22,7 @@
 	<head>
 	<head>
 		<title> Lab 5 Data Types and Variables </title>
-		<link rel="stylesheet" type="text/css" href="/lab5/css/lab.css">
+		<link rel="stylesheet" type="text/css" href="./lab5/css/lab.css">
 	</head>
 	<body>
 	<main id="content">
