--- a/lab5/index.html
+++ b/lab5/index.html
@@ -20,9 +20,8 @@
 	<!DOCTYPE html>
 	<html>
 	<head>
-	<head>
 		<title> Lab 5 Data Types and Variables </title>
-		<link rel="stylesheet" type="text/css" href="./lab5/css/lab.css">
+		<link rel="stylesheet" type="text/css" href="/lab5/css/lab.css">
 	</head>
 	<body>
 	<main id="content">
