--- a/lab6/index.html
+++ b/lab6/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 6 - Arrays and Objects</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
   	<meta charset="UTF-8" />
@@ -23,25 +23,30 @@
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
-			<h1>Lab X - Subject/Topic</h1>
+			<h1>Lab 6 - Arrays and objects</h1>
 			<div class="minor-section">
 					<h2>Challenge</h2>
-					<p>Restate the challenge of the lab here.</p>
+					<p>The challenge of this lab was to learn and expierment with java script, with arrays and objects. </p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Problems</h2>
-					<p>What problems arose? How did you solve them? </p>
+					<p>The only problems I had was conceptualizing this. I still dont understand java script very much. But i was able to follow the directions and think I did well.   </p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Reflection</h2>
-					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
+					<p>I put a little bit more effort into this assignment than the ones before, becuase  I simply don't understand java script! But it's alright I think I did an alright job and I got help from my partner and other students in the class.  </p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Results</h2>
 					<div id="output"></div>
+
+			</div>
+			<h3>Script Output</h3>
+			<div class=output>
+					<script type="text/javascript" src="js/lab.js"></script>
 			</div>
 		</section>
 		<nav id="links">
