--- a/lab6/index.html
+++ b/lab6/index.html
@@ -22,8 +22,8 @@
 <body>
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
-		<section>
-			<h1>Lab 6 - Arrays and objects</h1>
+		<section> 
+			<h1>Lab 6 - Arrays and Objects</h1>
 			<div class="minor-section">
 					<h2>Challenge</h2>
 					<p>The challenge of this lab was to learn and expierment with java script, with arrays and objects. </p>
