--- a/lab7/index.html
+++ b/lab7/index.html
@@ -19,7 +19,7 @@
         <section>
             <div class="minor-section">
                 <h2>Script Output</h2>
-                <script src="js/lab.js"></script>
+                <script src="/lab7/js/lab.js"></script>
                 <div id="output"></div>
             </div>
 
