--- a/lab7/index.html
+++ b/lab7/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lab 7 - Functions</title>
-    <link rel="stylesheet" type="text/css" href="../css/site.css">
-    <link rel="stylesheet" type="text/css" href="css/lab.css">
+  
+    <link rel="stylesheet" type="text/css" href="/lab7/css/index.css">
     
     <!-- load jQuery library to make JavaScript easier (must be above our lab js) -->
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
