--- a/lab7/index.html
+++ b/lab7/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lab 7 - Functions</title>
   
-    <link rel="stylesheet" type="text/css" href="/lab7/css/index.css">
+    <link rel="stylesheet" type="text/css" href="../css/index.css">
     
     <!-- load jQuery library to make JavaScript easier (must be above our lab js) -->
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     
     <!-- link to JavaScript file - DEFER waits until all elements are rendered -->
-    <script type="text/javascript" src="js/lab.js" DEFER></script>
+ <script type="text/javascript" src="js/lab.js" DEFER></script>
+
 </head>
 <body>
     <!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
