--- a/lab8/index.html
+++ b/lab8/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lab 7 - Functions</title>
+    <title>Lab 8 - Anon functions</title>
   
     <link rel="stylesheet" type="text/css" href="../css/index.css">
     
@@ -26,12 +26,12 @@
 
             <div class="minor-section">
                 <h2>Challenge</h2>
-                <p>The challenge of this lab was to experiment with JS functions.</p>
+                <p>The challenge of this lab was to experiment with JS functions and call back functions.</p>
             </div>
 
             <div class="minor-section">
                 <h2>Problems?</h2>
-                <p>I struggled with java script an understanding the code and the directions. I was able to figure it out through asking wesbot and my friends from the class.</p>
+                <p>I still struggle with java script an understanding the code and the directions.I guess I just get confused whe  it comes to the consol. I'm not even sure if i did it correctly. </p>
             </div>
 
             <div class="minor-section">
