--- a/lab9/index.html
+++ b/lab9/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lab 8 - Anon functions</title>
+    <title>Lab 9</title>
   
     <link rel="stylesheet" type="text/css" href="../css/index.css">
     
