--- a/lab9/index.html
+++ b/lab9/index.html
@@ -11,7 +11,7 @@
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     
     <!-- link to JavaScript file - DEFER waits until all elements are rendered -->
- <script type="text/javascript" src="js/lab.js" DEFER></script>
+    <script type="text/javascript" src="/lab9/js/lab.js" DEFER></script>
 
 </head>
 <body>
@@ -20,7 +20,7 @@
         <section>
             <div class="minor-section">
                 <h2>Script Output</h2>
-                <script src= "/lab9/js/lab.js" ></script>
+                
                 <div id="output"></div>
             </div>
 
