--- a/lab10/index.html
+++ b/lab10/index.html
@@ -20,22 +20,22 @@
 
             <div class="minor-section" id="challenge">
                 <h2>Challenge</h2>
-                <p> I think I understood the assignment pretyy well, its definetly a bigger issue actually exectuing the task vs undertsanding but I hope I did it right! </p>
+                <p> This lab had a few challenges like Making sure that the jQuery is loaded (I still don't understand this very well but I feel more confident after this lab) This also involved more stylign with css, which I actually find that I love doing! css is a really fun program to mess around with, and theres a million and one sources online to help style things how you want them.  </p>
             </div>
 
             <div class="minor-section" id="problems">
                 <h2>Problems?</h2>
-                <p>I encountered a few issues with the JavaScript code. At first, the toggleClass("special") function wasn't working because I had a typo.</p>
+                <p>I think I understood the assignment pretyy well, its definetly a bigger issue actually exectuing the task vs undertsanding but I hope I did it right! I didn't run into many problems, but I did have the slightly bit of help from my CS friends. This was the first lab where everything linked correctly the first time wohoo! </p>
             </div>
 
             <div class="minor-section" id="reflection">
                 <h2>Reflection</h2>
-                <p>I learned the importance of setting up a project with a well-organized file structure and the value of using the console for debugging. I became more comfortable with jQuery for adding and toggling classes. This assignment gave me a new appreciation for testing small pieces of code incrementally.</p>
+                <p> My main takeaway from this lab is defining that I really feel comfortable with CSS. I think I like how many resources there are for helping with styling choices. For example I did the BONUS TASK X, and I was able to make the bubbles of random generated text look like iMessage bubbles! Pretty cool!</p>
             </div>
 
             <div class="minor-section" id="results">
                 <h2>Results</h2>
-                <p>The final output of the project met the requirements, and I was able to successfully implement the buttons and styling as intended.</p>
+                <p> I think it looks pretty cool, I'm less comfortable with javascript, and more comfortable with CSS! </p>
             </div>
         </section>
     </main>
