--- a/lab12/index.html
+++ b/lab12/index.html
@@ -21,27 +21,29 @@
               <input type="text" id="input">
               <button id="button">Submit</button>
               <div id="output"></div>
+
+              <img class="Hogwarts" src="/img/castlehogwarts.png" width="200"> 
             </div>
           </div>
            
             <div class="minor-section" id="challenge">
                 <h2>Challenge</h2>
-                <p> This lab had a few challenges like Making sure that the jQuery is loaded (I still don't understand this very well but I feel more confident after this lab) This also involved more stylign with css, which I actually find that I love doing! css is a really fun program to mess around with, and theres a million and one sources online to help style things how you want them.  </p>
+                <p> The challenge of this lab was to create an interactive webpage that randomly chooses a hogwarts house based on the input in the text field. </p>
             </div>
 
             <div class="minor-section" id="problems">
                 <h2>Problems?</h2>
-                <p>I think I understood the assignment pretyy well, its definetly a bigger issue actually exectuing the task vs undertsanding but I hope I did it right! I didn't run into many problems, but I did have the slightly bit of help from my CS friends. This was the first lab where everything linked correctly the first time wohoo! </p>
+                <p> I didn't have any actual issues with the lab itself, but I did try to get fancy and go above and beyond and thats when I started to have problems. Like I attempted to import a harry potter themed font into css that didn't work, so I had to pivot into different sytling.  </p>
             </div>
 
             <div class="minor-section" id="reflection">
                 <h2>Reflection</h2>
-                <p> My main takeaway from this lab is defining that I really feel comfortable with CSS. I think I like how many resources there are for helping with styling choices. For example I did the BONUS TASK X, and I was able to make the bubbles of random generated text look like iMessage bubbles! Pretty cool!</p>
+                <p>  This was a pretty cool lab, I think the concept is good to learn how to randomisze stuff like this. My group was thinking of making a cookbook website and I could see this lab being applicaple. </p>
             </div>
 
             <div class="minor-section" id="results">
                 <h2>Results</h2>
-                <p> I think it looks pretty cool, I'm less comfortable with javascript, and more comfortable with CSS! </p>
+                <p> I tried to make this as harry potter themed as possible, since i am a nerd. Go Slytherin! </p>
             </div>
         </section>
     </main>
