--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
 			<a href="lab10/index.html">Lab 10</a> 
 			<a href="lab11/index.html">Lab 11</a> 
 			<a href="lab12/index.html">Lab 12</a> 
+			<a href="final/index.html">FINAL</a> 
+
 
 			
 		</nav>
