--- a/final/index.html
+++ b/final/index.html
@@ -40,6 +40,8 @@
             <!-- Toolbox -->
             <section id="toolbox">
                 <h2>Toolbox</h2>
+                <div id="breathing-bubble"></div> 
+                
                 <div class="tool" id="breathing-tool">
                     <h3>Breathing Bubble</h3>
                     <div class="bubble"></div>
