--- a/final/index.html
+++ b/final/index.html
@@ -28,8 +28,8 @@
                     <canvas id="sandCanvas" width="800" height="400"></canvas>
                     
                     <!-- Decorative Plants/Structures -->
-                    <img src="plant1.png" alt="Plant" class="zen-decor left-decor">
-                    <img src="stone-lantern.png" alt="Lantern" class="zen-decor right-decor">
+                    <img src="img/Zen.png" alt="Plant" class="zen-decor left-decor">
+                    <img src="img/Garden 1.png" alt="Lantern" class="zen-decor right-decor">
                 </div>
             
                 <!-- Rake Tools -->
