--- a/lab9/index.html
+++ b/lab9/index.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" type="text/css" href="../css/index.css">
     
     <!-- Load jQuery library -->
-    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     
     <!-- Link to JavaScript file -->
-    <script src="../js/lab.js" defer></script>
+    <script src="/lab9/js/lab.js" defer></script>
 </head>
 <body>
     <main id="content">
