--- a/lab9/index.html
+++ b/lab9/index.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lab 9</title>
-
-    <!-- Link to CSS -->
-    <link rel="stylesheet" type="text/css" href="../css/index.css">
-    
-    <!-- Load jQuery library -->
+    <title>jQuery Experiment</title>
+    <!-- CSS -->
+    <link rel="stylesheet" type="text/css" href="css/index.css">
+    <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    
-    <!-- Link to JavaScript file -->
-    <script src="/lab9/js/lab.js" defer></script>
+    <!-- JavaScript -->
+    <script src="js/lab.js" defer></script>
 </head>
+<body>
+    <header>
+        <h1>jQuery Experiment</h1>
+    </header>
 <body>
     <main id="content">
         <section>
@@ -40,6 +41,8 @@
                 <h2>Results</h2>
                 <p>The final output of the project met the requirements, and I was able to successfully implement the buttons and styling as intended.</p>
             </div>
+        </div>
+        <div id="output"></div>
         </section>
     </main>
 </body>
